IRtest_out/94_nested_loops.err
irs/94_nested_loops.ll:38:1: error: expected instruction opcode
next_entry55:
^
1 error generated.
